Added Items API and Itmes factory and documented the new order APIs
